[package]
name = "dummy_market_price_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4"
tracing = "0.1"
tokio-tungstenite = "0.21.0"
tokio = { version = "1.35.0", features = ["full"] }
tracing-subscriber = "0.3.18"
rand = { version = "0.8.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dotenv = "0.15.0"
